# DPHPC-project

./: .gitignore  README.md  multi_dfa.c
filetiming/: directoryTiming.cpp  (+8 more)
src/: CMakeLists.txt  atest.sh  config_example.h  main.cpp  run_test.sh  stest.sh  token_type.h  xeon_phi_compile.sh  xeon_phi_compile_hash.sh
src/benchmark/: directoryTiming.cpp  howto.txt  icc.sh  mainToCSV.sh  parallelFileTiming.cpp  q.sh  stest.sh  tictoc.cpp  toCSV.sh  vecTimeMini.cpp  vectorizationTiming.cpp
src/benchmark/experiments/15-12-06/: big_strides.csv  small_strides.csv  tiny_strides.csv
src/benchmark/experiments/15-12-07/: big_strides_read_all.csv  big_strides_simulating_tokenizer.csv
src/benchmark/experiments/15-12-09/: BitmaskDeflator.csv  MyVector.csv
src/benchmark/experiments/15-12-13/: scaling_with_number_and_complexity_of_queries.csv
src/benchmark/experiments/16-01-22/: 2GB_tokenizer_simulator_results_first_run.csv  2GB_tokenizer_simulator_second_run.csv  4GB_tokenizer_simulator_results_first_run.csv  executed code.txt
src/benchmark/tokenizer_simulator/: atest.sh  tokenizer_simulator.cpp
src/chunker/: bufsplit.c  bufsplit.cpp  bufsplit.h  chunker.c  chunker.h
src/chunker/test/: Chunker.cpp  Chunker.h  test_chunker.cpp
src/compression/: BitmaskUtils.h  Deflator.cpp  MyVector.h  SupressClosingVSizeDeflator.h  SupressClosingVSizeInflator.h  SurpressClosingDeflator.cpp  SurpressClosingDeflator.h  SurpressClosingVSizeDeflator.cpp  SurpressClosingVSizeDeflator.h  ZLibDeflator.cpp  ZLibDeflator.h  compression.h
src/compression/test/: Makefile  compression_zlib.cpp
src/deflated_tokenstream/: deflated_tokenstream.h
src/exceptions/: GeneralException.h
src/loader/: Loader.h  MMapLoader.cpp  MMapLoader.h
src/matcher/: DFAMatcher.cpp  DFAMatcher.h  Match.h  Matcher.h
src/multi_dfa/: MultiDFA.cpp  MultiDFA.h  compile.sh  cpp_compilation.sh  mediator.c  mediator.cpp  mediator.h  multi_dfa.c  multi_dfa.cpp  multi_dfa.h  multi_dfa_runner.c  multi_dfa_runner.cpp  readme.txt
src/multi_dfa/test/: makefile  mediator_test.c  multi_dfa_test.cpp  tokens
src/nfa/: multi_dfa.c  multi_dfa.h  nfa.cc  nfa.hpp  nfa_test.cc
src/nfa/qtree2nfa/: fa.py  gen_nfa.py  generate_delta_table.py  generate_multi_dfa_lut.py  qtree.py  qtree_nfa.py
src/parser/: Makefile  TagKey.cpp  TagKey.h  TagMap.cpp  TagMap.h  lexer.c  lexer.cpp  lexer.h  map.c  map.cpp  map.h  parser.c  parser.cpp  parser.h  token_list.c  token_list.cpp  token_list.h  tokenstream.c  tokenstream.cpp  tokenstream.h
src/parser/test/: test_parser.cpp
src/seg_list/: seglist.h
src/test/: xmark8queries.xpath
src/test/XMark/: singlequery.xpath
src/timing/: GlobalTicToc.cpp  GlobalTicToc.h  tictoc.h
src/tokenizer/: SuperChunkTokenizer.cpp  SuperChunkTokenizer.h  Tokenizer.h
(+115 files in other folders)
